--- a/public/videos/create.html
+++ b/public/videos/create.html
@@ -6,14 +6,5 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,500" rel="stylesheet">
     <link rel='stylesheet' href='stylesheets/style.css'>
   </head>
-  <body>
-    <div class="title-container">
-      <div class="title-logo">
-        <img src="img/logo.svg" alt="">
-      </div>
-    </div>
-    <div id="videos-container" class="contents-container">
-    </div>
-    <a href="/videos/create.html">Save a video</a>
-  </body>
+  <body>Save a video</body>
 </html>
